# freebsd-rustdate

./: CHANGES  Cargo.toml  LICENSE  README  README.md  SRC-ROADMAP
.github/workflows/: build-and-test.yml  release-packaging.yaml  testing.yaml
src/: check.rs  cmd.rs  command.rs  components.rs  config.rs  core.rs  info.rs  lib.rs  main.rs  metadata.rs  server.rs  state.rs  util.rs
src/cmd/: check_fetch.rs  check_sys.rs  clean.rs  cron.rs  dump_metadata.rs  extract.rs  fetch.rs  install.rs  resolve_merges.rs  show_install.rs  show_merges.rs  upgrade.rs
src/command/: line.rs
src/components/: structs.rs
src/core/: filter.rs  hashfetch.rs  install.rs  merge.rs  patchcheck.rs  pool.rs  rtdirs.rs  scan.rs
src/core/install/: bits.rs  install.rs  kernel.rs  post.rs
src/core/pool/: fetch.rs  hashcheck.rs  patch.rs  scan.rs  stash.rs
src/info/: kernel.rs  version.rs
src/metadata/: files.rs  group.rs  idx.rs  line.rs  metadata.rs  parse.rs  split.rs  structs.rs
src/server/: http.rs  keytag.rs  lookup.rs  metadata.rs  server.rs
src/server/metadata/: files.rs
src/server/test_data/: latest  latest.ssl  pub.ssl
src/util/: bectl.rs  bspatch.rs  compress.rs  fs.rs  hash.rs
